--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "@nestjs/common": "^8.4.4",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@prisma/client": "3.13.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "prisma": "^3.13.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5"
